feat: Add sitemap caching infrastructure with fingerprint invalidation
- Add SitemapCacheManager with configurable TTL and jitter to prevent thundering herd
- Implement dataset fingerprint tracking (count + max updated_at) for books and authors
- Add refreshSitemapCachesIfDatasetChanged() for cache-aware scheduled updates
- Refactor SitemapRepository to eliminate redundant queries and improve ordering consistency
- Add SitemapProperties validation with @PostConstruct
- Update SitemapRefreshScheduler to use fingerprint-based invalidation

Sitemap responses are now cached for 7 days (configurable) and invalidated only when underlying data changes.