@@ -1,27 +1,21 @@
 package com.williamcallahan.book_recommendation_engine.repository;
 
-import org.springframework.dao.DataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.stereotype.Repository;
 
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Locale;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
  * Repository responsible for Postgres backed sitemap queries.
- *
- * Fetches letter bucket counts and paginated slices for books and authors so the
- * higher level service can build both HTML and XML sitemap payloads without any
- * S3 dependence.
  */
 @Repository
 public class SitemapRepository {
@@ -31,11 +25,13 @@ public class SitemapRepository {
             "WHEN substring(lower(trim(%s)), 1, 1) BETWEEN 'a' AND 'z' THEN substring(lower(trim(%s)), 1, 1) " +
             "ELSE '0-9' END";
 
+    private static final String BOOK_UPDATED_AT_ALIAS = "book_updated_at";
+
     private static final RowMapper<BookRow> BOOK_ROW_MAPPER = (rs, rowNum) -> new BookRow(
             rs.getString("id"),
             rs.getString("slug"),
             rs.getString("title"),
-            rs.getTimestamp("updated_at") != null ? rs.getTimestamp("updated_at").toInstant() : Instant.EPOCH
+            rs.getTimestamp(BOOK_UPDATED_AT_ALIAS).toInstant()
     );
 
     private final JdbcTemplate jdbcTemplate;
@@ -44,154 +40,159 @@ public class SitemapRepository {
         this.jdbcTemplate = jdbcTemplate;
     }
 
-    private boolean jdbcUnavailable() {
-        return jdbcTemplate == null;
-    }
-
     public int countAllBooks() {
-        if (jdbcUnavailable()) {
-            return 0;
-        }
         String sql = "SELECT COUNT(*) FROM books WHERE slug IS NOT NULL";
         return Objects.requireNonNullElse(jdbcTemplate.queryForObject(sql, Integer.class), 0);
     }
 
     public Map<String, Integer> countBooksByBucket() {
-        if (jdbcUnavailable()) {
-            return Collections.emptyMap();
-        }
         String expr = LETTER_BUCKET_EXPRESSION.formatted("title", "title");
         String sql = "SELECT " + expr + " AS bucket, COUNT(*) AS total FROM books " +
                      "WHERE slug IS NOT NULL GROUP BY bucket";
-        try {
-            return jdbcTemplate.query(sql, rs -> {
-                Map<String, Integer> counts = new LinkedHashMap<>();
-                while (rs.next()) {
-                    counts.put(rs.getString("bucket").toUpperCase(Locale.ROOT), rs.getInt("total"));
-                }
-                return counts;
-            });
-        } catch (DataAccessException e) {
-            return Collections.emptyMap();
-        }
+        return jdbcTemplate.query(sql, rs -> {
+            Map<String, Integer> counts = new LinkedHashMap<>();
+            while (rs.next()) {
+                counts.put(rs.getString("bucket").toUpperCase(Locale.ROOT), rs.getInt("total"));
+            }
+            return counts;
+        });
     }
 
     public int countBooksForBucket(String bucket) {
-        if (jdbcUnavailable()) {
-            return 0;
-        }
         String expr = LETTER_BUCKET_EXPRESSION.formatted("title", "title");
         String sql = "SELECT COUNT(*) FROM books WHERE slug IS NOT NULL AND " + expr + " = ?";
         return Objects.requireNonNullElse(jdbcTemplate.queryForObject(sql, Integer.class, bucket.toLowerCase(Locale.ROOT)), 0);
     }
 
     public List<BookRow> fetchBooksForBucket(String bucket, int limit, int offset) {
-        if (jdbcUnavailable()) {
-            return Collections.emptyList();
-        }
         String expr = LETTER_BUCKET_EXPRESSION.formatted("title", "title");
-        String sql = "SELECT id, slug, title, updated_at FROM books " +
-                     "WHERE slug IS NOT NULL AND " + expr + " = ? " +
-                     "ORDER BY lower(title), slug LIMIT ? OFFSET ?";
-        try {
-            return jdbcTemplate.query(sql, BOOK_ROW_MAPPER, bucket.toLowerCase(Locale.ROOT), limit, offset);
-        } catch (DataAccessException e) {
-            return Collections.emptyList();
-        }
+        String sql = "SELECT id, slug, title, COALESCE(updated_at, created_at, NOW()) AS " + BOOK_UPDATED_AT_ALIAS +
+                     " FROM books WHERE slug IS NOT NULL AND " + expr + " = ? " +
+                     "ORDER BY lower(title) NULLS LAST, slug NULLS LAST, id ASC LIMIT ? OFFSET ?";
+        return jdbcTemplate.query(sql, BOOK_ROW_MAPPER, bucket.toLowerCase(Locale.ROOT), limit, offset);
     }
 
     public List<BookRow> fetchBooksForXml(int limit, int offset) {
-        if (jdbcUnavailable()) {
-            return Collections.emptyList();
-        }
-        String sql = "SELECT id, slug, title, updated_at FROM books WHERE slug IS NOT NULL " +
-                     "ORDER BY updated_at DESC, lower(title) ASC LIMIT ? OFFSET ?";
-        try {
-            return jdbcTemplate.query(sql, BOOK_ROW_MAPPER, limit, offset);
-        } catch (DataAccessException e) {
-            return Collections.emptyList();
-        }
+        String sql = "SELECT id, slug, title, COALESCE(updated_at, created_at, NOW()) AS " + BOOK_UPDATED_AT_ALIAS +
+                     " FROM books WHERE slug IS NOT NULL " +
+                     "ORDER BY COALESCE(updated_at, created_at, NOW()) ASC NULLS LAST, " +
+                     "         lower(title) ASC NULLS LAST, " +
+                     "         slug ASC NULLS LAST, " +
+                     "         id ASC " +
+                     "LIMIT ? OFFSET ?";
+        return jdbcTemplate.query(sql, BOOK_ROW_MAPPER, limit, offset);
     }
 
     public Map<String, Integer> countAuthorsByBucket() {
-        if (jdbcUnavailable()) {
-            return Collections.emptyMap();
-        }
         String expr = LETTER_BUCKET_EXPRESSION.formatted("COALESCE(normalized_name, name)", "COALESCE(normalized_name, name)");
         String sql = "SELECT " + expr + " AS bucket, COUNT(*) AS total FROM authors GROUP BY bucket";
-        try {
-            return jdbcTemplate.query(sql, rs -> {
-                Map<String, Integer> counts = new LinkedHashMap<>();
-                while (rs.next()) {
-                    counts.put(rs.getString("bucket").toUpperCase(Locale.ROOT), rs.getInt("total"));
-                }
-                return counts;
-            });
-        } catch (DataAccessException e) {
-            return Collections.emptyMap();
-        }
+        return jdbcTemplate.query(sql, rs -> {
+            Map<String, Integer> counts = new LinkedHashMap<>();
+            while (rs.next()) {
+                counts.put(rs.getString("bucket").toUpperCase(Locale.ROOT), rs.getInt("total"));
+            }
+            return counts;
+        });
     }
 
     public int countAuthorsForBucket(String bucket) {
-        if (jdbcUnavailable()) {
-            return 0;
-        }
         String expr = LETTER_BUCKET_EXPRESSION.formatted("COALESCE(normalized_name, name)", "COALESCE(normalized_name, name)");
         String sql = "SELECT COUNT(*) FROM authors WHERE " + expr + " = ?";
         return Objects.requireNonNullElse(jdbcTemplate.queryForObject(sql, Integer.class, bucket.toLowerCase(Locale.ROOT)), 0);
     }
 
     public List<AuthorRow> fetchAuthorsForBucket(String bucket, int limit, int offset) {
-        if (jdbcUnavailable()) {
-            return Collections.emptyList();
-        }
         String expr = LETTER_BUCKET_EXPRESSION.formatted("COALESCE(normalized_name, name)", "COALESCE(normalized_name, name)");
-        String sql = "SELECT id, name, updated_at FROM authors WHERE " + expr + " = ? " +
-                     "ORDER BY lower(name), id LIMIT ? OFFSET ?";
-        try {
-            return jdbcTemplate.query(sql, (rs, rowNum) -> new AuthorRow(
-                    rs.getString("id"),
-                    rs.getString("name"),
-                    rs.getTimestamp("updated_at") != null ? rs.getTimestamp("updated_at").toInstant() : Instant.EPOCH
-            ), bucket.toLowerCase(Locale.ROOT), limit, offset);
-        } catch (DataAccessException e) {
-            return Collections.emptyList();
-        }
+        String sql = "SELECT id, name, COALESCE(updated_at, created_at, NOW()) AS author_updated_at " +
+                     "FROM authors WHERE " + expr + " = ? " +
+                     "ORDER BY lower(COALESCE(name, '')) NULLS LAST, id ASC LIMIT ? OFFSET ?";
+        return jdbcTemplate.query(sql, (rs, rowNum) -> new AuthorRow(
+                rs.getString("id"),
+                rs.getString("name"),
+                rs.getTimestamp("author_updated_at").toInstant()
+        ), bucket.toLowerCase(Locale.ROOT), limit, offset);
     }
 
     public Map<String, List<BookRow>> fetchBooksForAuthors(Set<String> authorIds) {
-        if (jdbcUnavailable() || authorIds == null || authorIds.isEmpty()) {
-            return Collections.emptyMap();
+        if (authorIds == null || authorIds.isEmpty()) {
+            return Map.of();
         }
-        String sql = "SELECT baj.author_id, b.id, b.slug, b.title, b.updated_at " +
-                     "FROM book_authors_join baj " +
-                     "JOIN books b ON b.id = baj.book_id " +
-                     "WHERE baj.author_id IN (%s) AND b.slug IS NOT NULL " +
-                     "ORDER BY baj.author_id, lower(b.title), b.slug";
+        String sql = "SELECT baj.author_id, b.id, b.slug, b.title, COALESCE(b.updated_at, b.created_at, NOW()) AS " + BOOK_UPDATED_AT_ALIAS +
+                     " FROM book_authors_join baj " +
+                     " JOIN books b ON b.id = baj.book_id " +
+                     " WHERE baj.author_id IN (%s) AND b.slug IS NOT NULL " +
+                     " ORDER BY baj.author_id, lower(b.title), b.slug";
         String placeholders = authorIds.stream().map(id -> "?").collect(Collectors.joining(","));
-        sql = sql.formatted(placeholders);
+        String resolvedSql = sql.formatted(placeholders);
         Object[] params = authorIds.toArray();
-        try {
-            return jdbcTemplate.query(sql, rs -> {
-                Map<String, List<BookRow>> results = new LinkedHashMap<>();
-                while (rs.next()) {
-                    String authorId = rs.getString("author_id");
-                    BookRow row = new BookRow(
-                            rs.getString("id"),
-                            rs.getString("slug"),
-                            rs.getString("title"),
-                            rs.getTimestamp("updated_at") != null ? rs.getTimestamp("updated_at").toInstant() : Instant.EPOCH
-                    );
-                    results.computeIfAbsent(authorId, k -> new ArrayList<>()).add(row);
-                }
-                return results;
-            }, params);
-        } catch (DataAccessException e) {
-            return Collections.emptyMap();
+        return jdbcTemplate.query(resolvedSql, rs -> {
+            Map<String, List<BookRow>> results = new LinkedHashMap<>();
+            while (rs.next()) {
+                String authorId = rs.getString("author_id");
+                BookRow row = new BookRow(
+                        rs.getString("id"),
+                        rs.getString("slug"),
+                        rs.getString("title"),
+                        rs.getTimestamp(BOOK_UPDATED_AT_ALIAS).toInstant()
+                );
+                results.computeIfAbsent(authorId, key -> new ArrayList<>()).add(row);
+            }
+            return results;
+        }, params);
+    }
+
+    public List<PageMetadata> fetchBookPageMetadata(int pageSize) {
+        if (pageSize <= 0) {
+            throw new IllegalArgumentException("Page size must be positive, got: " + pageSize);
         }
+        String sql = "WITH ordered AS (" +
+                "    SELECT COALESCE(updated_at, created_at, NOW()) AS " + BOOK_UPDATED_AT_ALIAS + "," +
+                "           row_number() OVER (ORDER BY COALESCE(updated_at, created_at, NOW()) ASC NULLS LAST, " +
+                "                                       lower(title) ASC NULLS LAST, " +
+                "                                       slug ASC NULLS LAST, " +
+                "                                       id ASC) AS rn" +
+                "    FROM books" +
+                "    WHERE slug IS NOT NULL" +
+                ") " +
+                "SELECT CAST(FLOOR((rn - 1) / ?::numeric) AS bigint) + 1 AS page_number, " +
+                "       MAX(" + BOOK_UPDATED_AT_ALIAS + ") AS last_modified " +
+                "FROM ordered GROUP BY page_number ORDER BY page_number";
+        return jdbcTemplate.query(sql, (rs, rowNum) -> new PageMetadata(
+                rs.getInt("page_number"),
+                rs.getTimestamp("last_modified").toInstant()
+        ), pageSize);
+    }
+
+    public DatasetFingerprint fetchBookFingerprint() {
+        String sql = "SELECT COUNT(*) AS total_records, " +
+                "COALESCE(MAX(updated_at), MAX(created_at), TIMESTAMP 'epoch') AS last_modified " +
+                "FROM books WHERE slug IS NOT NULL";
+        return jdbcTemplate.queryForObject(sql, (rs, rowNum) -> new DatasetFingerprint(
+                rs.getInt("total_records"),
+                rs.getTimestamp("last_modified").toInstant()
+        ));
+    }
+
+    public DatasetFingerprint fetchAuthorFingerprint() {
+        String sql = "SELECT COUNT(DISTINCT a.id) AS total_records, " +
+                "GREATEST(" +
+                "    COALESCE(MAX(a.updated_at), MAX(a.created_at), TIMESTAMP 'epoch')," +
+                "    COALESCE(MAX(b.updated_at), MAX(b.created_at), TIMESTAMP 'epoch')" +
+                ") AS last_modified " +
+                "FROM authors a " +
+                "LEFT JOIN book_authors_join baj ON baj.author_id = a.id " +
+                "LEFT JOIN books b ON b.id = baj.book_id AND b.slug IS NOT NULL";
+        return jdbcTemplate.queryForObject(sql, (rs, rowNum) -> new DatasetFingerprint(
+                rs.getInt("total_records"),
+                rs.getTimestamp("last_modified").toInstant()
+        ));
     }
 
     public record BookRow(String bookId, String slug, String title, Instant updatedAt) {}
 
     public record AuthorRow(String id, String name, Instant updatedAt) {}
+
+    public record PageMetadata(int pageNumber, Instant lastModified) {}
+
+    public record DatasetFingerprint(int totalRecords, Instant lastModified) {}
 }
